[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-gov-framework"
version = "0.1.0"
description = "Mechanical Governance for LLM Decisions — model-agnostic governance regimes and metrics for high-stakes LLM decision systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Santander AI Lab" }]
keywords = [
    "llm",
    "ai-governance",
    "ai-safety",
    "learning-to-defer",
    "decision-systems",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Optional cloud backend. The core framework never imports a cloud SDK.
bedrock = ["boto3>=1.34"]
# Plotting helpers (mech_gov.analysis).
viz = ["pandas>=2.0", "matplotlib>=3.7", "seaborn>=0.13"]
# Development / testing.
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "black>=24.0", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/SantanderAI/mech-gov-framework"
Source = "https://github.com/SantanderAI/mech-gov-framework"
Issues = "https://github.com/SantanderAI/mech-gov-framework/issues"
Changelog = "https://github.com/SantanderAI/mech-gov-framework/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mech_gov = ["governance/policy_templates/*.txt", "data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=mech_gov"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[tool.coverage.run]
source = ["mech_gov"]
branch = true

[tool.coverage.report]
show_missing = true
